--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.app {
   text-align: center;
-  background-color: blue;
+  background-color: rgba(0, 0, 255, 0.082);
 }
