--- a/src/components/ItemCount/styles.css
+++ b/src/components/ItemCount/styles.css
@@ -43,8 +43,8 @@
      margin: 0 auto;
      border-radius: 15px;
  }
- p{
+/*  p{
      color: white;
      font-size: 1.5rem;
      text-align: center;
- }
+ } */
