--- a/src/components/ItemCount/styles.css
+++ b/src/components/ItemCount/styles.css
@@ -6,21 +6,21 @@
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  color: #ffad05;
-  background-color: black;
+  color: #070706;
+  background-color: whitesmoke;
   font-size: 1rem;
   border-color: transparent;
   transition: border-color 400ms ease, background-color 400ms ease,
  color 400ms ease; }
  .btn:hover{
     color: #000000;
-    background-color: #ffad05;
+    background-color: #8e8c8a;
     cursor: pointer;
     transition: border-color 400ms ease, background-color 400ms ease,
  color 400ms ease; }
 
  .btn:disabled{
-     color: #000000;
+     color: whitesmoke;;
     
  }
  .btn:disabled:hover{
@@ -38,7 +38,7 @@
 
  }
  .count-container{
-     background-color:black;
+     background-color:rgb(248, 246, 246);
      max-width: 200px;
      margin: 0 auto;
      border-radius: 15px;
