Se completa Desafío: Sincronizar counter. Nuevo componente Cart y eventos.

--- a/src/components/ItemCount/styles.css
+++ b/src/components/ItemCount/styles.css
@@ -24,7 +24,7 @@
     
  }
  .btn:disabled:hover{
-    background-color: #000000;
+    background-color: whitesmoke;
     cursor:auto;
  }
  .flex-row{
