--- a/src/components/ItemCount/styles.css
+++ b/src/components/ItemCount/styles.css
@@ -1,5 +1,12 @@
-.btn
-{border-radius: 0.5rem;
+.add-quantity{
+    width: 100%;
+    border: 1px solid #c1c1c1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.btn-plus, .btn-minus{
   padding: 1rem;
   margin: .5rem;
   display: inline;
@@ -7,44 +14,45 @@
   text-align: center;
   text-decoration: none;
   color: #070706;
-  background-color: whitesmoke;
   font-size: 1rem;
   border-color: transparent;
+  background-color: transparent;
   transition: border-color 400ms ease, background-color 400ms ease,
  color 400ms ease; }
- .btn:hover{
+ .btn-plus:hover, .btn-minus:hover{
     color: #000000;
-    background-color: #8e8c8a;
     cursor: pointer;
     transition: border-color 400ms ease, background-color 400ms ease,
  color 400ms ease; }
 
- .btn:disabled{
-     color: whitesmoke;;
+ .btn-plus:disabled,.btn-minus:disabled {
+     color: white;;
     
  }
- .btn:disabled:hover{
-    background-color: whitesmoke;
+.btn-minus:disabled:hover{
     cursor:auto;
  }
- .flex-row{
-     display: flex;
-     flex-direction: row;
- }
- .flex-center{
-     text-align: center;
-     justify-content: center;
-     align-items: center;
 
- }
  .count-container{
-     background-color:rgb(248, 246, 246);
      max-width: 200px;
-     margin: 0 auto;
-     border-radius: 15px;
  }
-/*  p{
+ .btn-addToCart{
+     background-color: #000000;
      color: white;
-     font-size: 1.5rem;
+     margin-top: 20px;
+     padding: 1rem;
+     font-weight: bold;
      text-align: center;
- } */
+     text-decoration: none;
+     width:100%;
+     font-size: 20px;
+     border-color: transparent;
+ }
+ .btn-addToCart:hover{
+    color: white;
+    background-color: rgb(79, 194, 79);
+    border-color: rgb(79, 194, 79);
+    cursor: pointer;
+    transition: border-color 400ms ease, background-color 400ms ease,
+ color 400ms ease;
+ }
