--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -9,17 +9,22 @@ li{
 
 a{
     text-decoration: none;
-    color:bisque;
+    color:rgb(0, 0, 0);
     padding:10px;
     margin: 0 10px;
+    font-weight: 600;
 }
 .navBar{
-    background-color: rgba(0, 0, 0, 0.832);
+    background-color: white;
     height: 15vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     align-content: space-between;
     justify-content: flex-end;
-    padding: 10px;
+    padding: 30px;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 auto;
+    border-bottom: 2px solid #c1c1c1;
 }
