--- a/src/containers/Cart/styles.css
+++ b/src/containers/Cart/styles.css
@@ -1,5 +1,85 @@
 .cartProductCard{
     display: flex;
-    flex-direction: column;
-    max-width: 150px;
+    max-height: 400px;
+    margin: 40px 0;
+    border-bottom:1px solid #c1c1c1;
+    padding-bottom: 10px;
 }
+.cartProductCard__image{
+    width: 300px;
+}
+li{
+    list-style: none
+}
+
+.btnRemoveAll, .btnRemoveItem{
+    background-color:#e41d1d;;
+    color:white;
+    margin-top: 20px;
+    padding: 10px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    width: 150px;
+    font-size: 15px;
+    border: 1px solid #c1c1c1;
+    transition: border-color 400ms ease, background-color 400ms ease,
+   color 400ms ease;
+}
+.btnRemoveAll:hover{
+    cursor: pointer;
+    background-color: #e41d1d;
+}
+.btnRemoveItem:hover{
+    cursor: pointer
+}
+.btnConfirmPurchase{
+    background-color:#0f9b1b;;
+    color:white;
+    margin-top: 20px;
+    padding: 10px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    width: 200px;
+    font-size: 15px;
+    transition: border-color 400ms ease, background-color 400ms ease,
+   color 400ms ease;
+}
+.btnConfirmPurchase:hover{
+    cursor: pointer
+}
+.checkOut{
+    display:flex;
+    flex-direction: column;
+    margin: 50px 0;
+}
+
+.cartContainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+.cartFinalPrice{
+    font-size: 20px;
+    font-weight: 800;
+}
+.cartProductCard__price,.cartProductCard__quantity{
+    font-size: 20px;
+    font-weight: 600;
+}
+.cartProductCard__title{
+    font-size: 25px;
+    font-weight: 700;
+}
+.cartContainer article{
+    margin-top:20px
+}
+
+
+@media(max-width:1000px){
+    .cartContainer,.cartProductCard{
+      flex-direction: column;
+      align-items: center;
+  }
+  }
