--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -28,3 +28,16 @@ a{
     margin: 0 auto;
     border-bottom: 2px solid #c1c1c1;
 }
+@media(max-width:1000px){
+    .navBar{
+        font-size: 13px;
+  }
+  }
+@media(max-width:890px){
+    .navBar{
+      flex-direction: column;
+      height: 30vh;
+      gap: 20px;
+    font-size: 12px;
+  }
+  }
