--- a/src/containers/Cart/styles.css
+++ b/src/containers/Cart/styles.css
@@ -75,6 +75,18 @@ li{
 .cartContainer article{
     margin-top:20px
 }
+.BtnBackToHomeCart{
+color: white;
+border: 1px solid;
+background-color:rgb(70, 233, 70);
+width:300px;
+height:50px;
+margin-top:30px;
+}
+.cartEmpty{
+    margin-left:30px;
+    margin-top: 30px;
+}
 
 
 @media(max-width:1000px){
